fix: Network Interface overflow

--- a/apps/client/src/features/app-settings/panel-utils/PanelUtils.module.scss
+++ b/apps/client/src/features/app-settings/panel-utils/PanelUtils.module.scss
@@ -196,6 +196,7 @@ $inner-padding: 1rem;
 .inlineElements {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 
   &.inner {
     gap: 0.5rem;
